fix: align article content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ body > *:not(:last-child) {
 .article-container {
     display:flex;
     flex-direction: column; 
+    align-items: flex-start;
     justify-content: space-around;
     gap:20px;
 }
@@ -500,6 +501,9 @@ article img {
 @media screen and (max-width: 1023px) {
     .display-desk {
         display: none !important;
+    }
+    article img {
+        width:25%;
     }
     .custom-grid1 {
         grid-template: 50vh / auto;
